[build-system]
requires = ["setuptools>=61.0", "numpy", "matplotlib", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumTuna"
version = "0.4.1"
authors = [
  { name="Harry Brough"},
]
description = "A user-friendly quantum chemistry program for diatomics."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/harrybrough1/TUNA"